app/src/sass/utils/_responsive.scss
/* =================================
   UTILS / RESPONSIVE
   ================================= */

@media (max-width : 479px) {

    /** NAV **/

    // Sidenav Push
    .sidenav {
        padding-top: 15px;
        
        a {
            font-size: 18px;
        }
    }
}



// Small devices (landscape phones, up to 576px)
@media (max-width: 576px) { 


    /** MY SKILLS **/
    #container-skills {
        #myskills {

            .row {
                position: relative;

                #myskills-blurb {
                    padding: 50px 50px 100px 50px;

                    li {
                        color: $list-item-text;
                        line-height: 2em; 
                    }
                } 
                // image of iPhone at small mobile 
                #iPhone {
                    position: absolute;
                    width: 75%;
                    padding-left: 15%;
                    padding-top: 70%;
                    z-index: 3;

                    img {
                        width: 100%;
                        display: block;
                    }    
                }
            }
        }
    }

    // push text down for iPhone image to overlap background colour
    // between two sections MY SKILLS and MEET ME
    #container-meetme {

        #meetme {
            position: relative;

            .row {

                #meetme-blurb {
                    padding: 110% 50px 50px 50px;
                    z-index: 1;

                    // h3 {
                    //     padding-top: 0;
                    // }
                }

                #container-profile-pic-small {
                    background-color: $highlight-colour;
                }

            } //end row
        }
    }
}

// Medium devices (tablets, 768px and up)
@media (max-width: 768px) { 

    #container-meetme {
        // background: linear-gradient(to right, $meetme-linear-start, $highlight-colour);
        background: linear-gradient(to right, $meetme-linear-start 30%, $highlight-colour);

        #meetme {

            .row {
                #wrapper-rimpey-banner {
                    background-position-x: 80%;
                }
            }
        }
    }

    
}

    // push text down for iPhone image to overlap background colour
    // between two sections MY SKILLS and MEET ME
//     #container-meetme {

//         #meetme {

//             .row {

//                 #meetme-blurb {

//                     h3 {
//                         padding-top: 0;
//                     }
//                 }
//             }
//         }
//     }
// }

@media (max-width: 992px){

    #container-meetme {
        
        #meetme {

            .row {
                #wrapper-rimpey-banner {
                    background-position-x: 82%;
                }
            }
        }
    }


    #container-footer {
        //move social media bubbles to right once social icons switch to bottom: 
        footer {

            #container-hello-msgbubble-social-media {

                background: none;

                // #msgbubbles {
                    // display: inline-block;
                    // width: 45px;
                    // height: 45px;
                    // margin: 20px 50px;
                    // margin-right: 0;
                    // right: 20px;


                    // img {
                    //     width: 100%;
                    // }
                // }
            }
        }
    }
}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) { 

    /** NAV **/

    #top-nav {
        display: inline-block;
    }


    /** MY SKILLS **/

    // push text down for iPhone image to overlap background colour
    // between two sections MY SKILLS and MEET ME
    #meetme {
        position: relative;

        .row {

            #meetme-blurb {
                padding: 100px 50px 50px 65px;
                z-index: 1;

                // h3 {
                //     padding-top: 0;
                // }

            }
        } //end row
    }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {

    // push text down for iPhone image to overlap background colour
    // between two sections MY SKILLS and MEET ME
    #container-meetme {

        #meetme {

            .row {

                #meetme-blurb {

                    h3 {
                        padding-top: 50px;
                    }
                }
            }
        }
    }
}


// // *** Bootstrap 4 Media Queries **

// Extra small devices (portrait phones, less than 576px)
// No media query since this is the default in Bootstrap

// Small devices (landscape phones, 576px and up)
// @media (min-width: 576px) { ... }

// Medium devices (tablets, 768px and up)
// @media (min-width: 768px) { ... }

// Large devices (desktops, 992px and up)
// @media (min-width: 992px) { ... }

// Extra large devices (large desktops, 1200px and up)
// @media (min-width: 1200px) { ... }





/* SMALLER THAN IPHONE 5 LAND */
// @media only screen and (max-width : 567px) {

// }

/* Extra Small Devices, Phones */
// @media only screen and (max-width : 479px) {


// }

/* Custom, iPhone Retina */
// @media only screen and (max-width : 320px) {

// }

